@@ -7,6 +7,8 @@ perl:
   - "5.16"
   - "5.18"
   - "5.20"
+  - "5.22"
+  - "5.24"
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libmysqlclient-dev
