@@ -1,3 +1,7 @@
+2016-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.038_01)
+* Include errno.h for MYSQL_ASYNC becase it uses errno variable (pali)
+* Travis: also test on perl 5.22 and 5.24.
+
 2016-10-19 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.038)
 * Version 4.037_1 had fixes for MySQL 8.0 provided
   Bernt Johnsen @ Oracle that were not in the Changelogs
